# attested-fetch

./: .dockerignore  .gitmodules  Dockerfile  README.md
src/: CMakeLists.txt  afetch.edl
src/enclave/: CMakeLists.txt  curl.h  enclave.cpp  util.h
src/host/: host.cpp
